added user documentation